<resources>
    <string name="app_name">UsersApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="e_mail">E-mail</string>
    <string name="update_user">update user</string>
    <string name="remove_user">remove user</string>
    <string name="add_user">Add User</string>
    <string name="active_users">Active Users:</string>
    <string name="deleted_users">Deleted Users:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>