<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--edittexts-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_firstName"
            style="@style/et"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_lastName"
            style="@style/et"
            android:hint="@string/last_name"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/et_firstName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_age"
            style="@style/et"
            android:hint="@string/age"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/et_lastName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/et"
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/et_age" />

        <!--buttons-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_addUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_removeUser"
            app:layout_constraintTop_toBottomOf="@id/rvUsers"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/left_guideline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_removeUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/remove_user"
            app:layout_constraintTop_toBottomOf="@id/rvUsers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_updateUser"
            app:layout_constraintStart_toEndOf="@id/btn_addUser" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_updateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_user"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/rvUsers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/btn_removeUser" />

        <!--textviews-->

        <TextView
            android:id="@+id/tv_activeUsers"
            style="@style/et"
            android:layout_marginTop="15dp"
            android:text="@string/active_users"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <TextView
            android:id="@+id/tv_deletedUsers"
            style="@style/et"
            android:layout_marginTop="15dp"
            android:text="@string/deleted_users"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_activeUsers" />

        <TextView
            android:id="@+id/tv_successError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text=""
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_deletedUsers"
            android:layout_marginTop="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUsers"
            android:layout_width="0dp"
            android:layout_height="230dp"
            app:layout_constraintTop_toBottomOf="@id/tv_deletedUsers"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintBottom_toTopOf="@id/btn_removeUser"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>